--- a/css/styles.css
+++ b/css/styles.css
@@ -531,9 +531,9 @@ img{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 408px;
-    height: 584px;
     background-color: #FCFCFC;
     border-radius: 4px;
+    padding: 72px 24px 24px;
 }
 
  .modal-close-btn{
@@ -559,5 +559,77 @@ img{
 .modal-close-btn-icon{
     padding: 8px;
     
+}
+
+.review-form-description{
+    color: #2E2F42;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+.review-form-field-wrapper{
+    margin-bottom: 8px;
+}
+
+.review-form-field-label{
+    display: block;
+    color: #8E8F99;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    margin-bottom: 4px;
+}
+
+.review-form-input-wrapper{
+    position: relative;
+}
+
+.review-form-input{
+    width: 100%;
+    height: 58px;
+    border-radius: 4px;
+    border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+    outline: 0px solid transparent;
+    background-color: transparent;
+    padding-left: 38px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.review-form-input:focus{
+    border-color: #4D5AE5;
+}
+
+.review-form-input-icon{
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    fill:#2E2F42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.review-form-input:focus + .review-form-input-icon{
+    fill: #4D5AE5;
+}
+
+.review-form-comment{
+    width: 100%;
+    height: 138px;
+    border-radius: 4px;
+    border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
+    background-color: transparent;
+    padding: 8px 16px;
+    resize: none;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    outline: 0px solid transparent;
+}
+
+.review-form-comment:focus{
+    border-color: #4D5AE5;
 }
 /* ==========/MODAL WINDOW STYLES========== */
