--- a/css/styles.css
+++ b/css/styles.css
@@ -620,6 +620,11 @@ img{
 .review-form-comment{
     width: 100%;
     height: 138px;
+    color: rgba(46, 47, 66, 0.40);
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     border-radius: 4px;
     border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
     background-color: transparent;
@@ -629,7 +634,20 @@ img{
     outline: 0px solid transparent;
 }
 
+.review-form-comment::placeholder{
+    color: rgba(46, 47, 66, 0.40);
+}
+
 .review-form-comment:focus{
     border-color: #4D5AE5;
+}
+
+.review-form-own-checkbox{
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
+    cursor: pointer;
 }
 /* ==========/MODAL WINDOW STYLES========== */
