--- a/css/styles.css
+++ b/css/styles.css
@@ -642,8 +642,24 @@ img{
     border-color: #4D5AE5;
 }
 
+
+.review-form-checkbox-wrapper{
+    margin-top: 8px;
+    margin-bottom: 24px;
+}
+
+.review-form-checkbox-label{
+    color: #8E8F99;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+}
+
 .review-form-own-checkbox{
-    display: block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
     width: 16px;
     height: 16px;
     border-radius: 2px;
@@ -651,7 +667,55 @@ img{
     cursor: pointer;
 }
 
+.privacy-policy{
+    color: #4D5AE5;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    text-decoration-line: underline;
+}
+
 .review-form-checkbox:checked + .review-form-checkbox-label > .review-form-own-checkbox{
     background-color: #404BBF;
+}
+
+.review-form-checkbox:focus + .review-form-checkbox-label > .review-form-own-checkbox{
+    border: 1px solid #4D5AE5
+}
+
+.review-form-own-checkbox-icon{
+    fill: #F4F4FD;
+    opacity: 0;
+}
+.review-form-checkbox:checked + .review-form-checkbox-label .review-form-own-checkbox-icon{
+    opacity: 1;
+}
+
+.review-form-submit-btn{
+    color: var(--WHITE, #FFF);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    border-radius: 4px;
+    background: #4D5AE5;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 16px 32px;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    transition: background-color250ms cubic-bezier(0.4, 0, 0.2,1);
+}
+
+.review-form-submit-btn:hover,
+.review-form-submit-btn:focus{
+    background-color: #404BBF;
+    font-weight: 500;
 }
 /* ==========/MODAL WINDOW STYLES========== */
