--- a/css/styles.css
+++ b/css/styles.css
@@ -496,7 +496,57 @@ img{
 }
 
 
-/* ==========/FOOTER========== */
+.subscribe{
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+.subscribe-footer-input{
+    border-radius: 4px;
+    border: 1px solid var(--WHITE,#FFF);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    padding: 8px 16px;
+}
+
+.subscribe-footer-input::placeholder{
+    color: #FFF;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 2;
+    letter-spacing: 0.04em;
+}
+
+.subscribe-btn{
+    color: var(--WHITE, #FFF);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    border-radius: 4px;
+    background: var(--IRIS, #4D5AE5);
+    cursor: pointer;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 8px24px;
+    min-width: 165px;
+    height: 40px;
+    border: none;
+    transition: background-color250mscubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus{
+    background-color: #404BBF;
+    font-weight: 500;
+}
+
+    /* ==========/FOOTER========== */
 
 
 /* ==========BACKDROP STYLES========== */
