--- a/css/styles.css
+++ b/css/styles.css
@@ -495,6 +495,9 @@ img{
     background-color: #31D0AA;
 }
 
+.subscribe-footer{
+    margin-left: 80px;
+}
 
 .subscribe{
     color: #FFF;
@@ -502,6 +505,13 @@ img{
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+.form-subscribe{
+    display: flex;
+    gap: 24px;
+    justify-content: flex-end;
 }
 
 .subscribe-footer-input{
@@ -521,6 +531,9 @@ img{
 }
 
 .subscribe-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: var(--WHITE, #FFF);
     text-align: center;
     font-size: 16px;
@@ -530,14 +543,13 @@ img{
     border-radius: 4px;
     background: var(--IRIS, #4D5AE5);
     cursor: pointer;
-    display: block;
     margin-right: auto;
     margin-left: auto;
     padding: 8px24px;
     min-width: 165px;
     height: 40px;
     border: none;
-    transition: background-color250mscubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .subscribe-btn:hover,
@@ -546,7 +558,10 @@ img{
     font-weight: 500;
 }
 
-    /* ==========/FOOTER========== */
+.subscribe-btn-icon{
+    margin-left: 16px;
+}
+/* ==========/FOOTER========== */
 
 
 /* ==========BACKDROP STYLES========== */
