--- a/css/styles.css
+++ b/css/styles.css
@@ -520,6 +520,13 @@ img{
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     background-color: transparent;
     padding: 8px 16px;
+    width: 264px;
+    height: 40px;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    color: #ffffff;
 }
 
 .subscribe-footer-input::placeholder{
@@ -528,6 +535,7 @@ img{
     font-weight: 400;
     line-height: 2;
     letter-spacing: 0.04em;
+    color: #ffffff;
 }
 
 .subscribe-btn{
@@ -572,7 +580,7 @@ img{
     right: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(46, 47, 66, 0.4);
     z-index: 9999;
     opacity: 0;
     visibility: hidden;
@@ -596,34 +604,41 @@ img{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 408px;
+    min-height: 584px;
     background-color: #FCFCFC;
     border-radius: 4px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     padding: 72px 24px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
  .modal-close-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     top: 24px;
     right: 24px;
+    width: 24px;
+    height: 24px;
     padding: 0;
     background-color: #E7E9FC;
-    border: none;
+    cursor: pointer;
     line-height: 0; 
     fill: #2E2F42;
     border-radius: 50%;
-    border:rgba(0, 0, 0, 0.10);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid rgba(0, 0, 0, 0.1);;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
 .modal-close-btn:focus{
-    fill:#FFFFFF;
     background-color: #404BBF;
+    fill: #ffffff;
 } 
 
 .modal-close-btn-icon{
-    padding: 8px;
-    
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-form-description{
@@ -637,7 +652,7 @@ img{
 }
 
 .review-form-field-wrapper{
-    margin-bottom: 8px;
+    margin-bottom: 16px
 }
 
 .review-form-field-label{
@@ -656,7 +671,7 @@ img{
 
 .review-form-input{
     width: 100%;
-    height: 58px;
+    height: 40px;
     border-radius: 4px;
     border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.40));
     outline: 0px solid transparent;
@@ -684,7 +699,7 @@ img{
 
 .review-form-comment{
     width: 100%;
-    height: 138px;
+    height: 120px;
     color: rgba(46, 47, 66, 0.40);
     font-size: 12px;
     font-weight: 400;
@@ -695,7 +710,7 @@ img{
     background-color: transparent;
     padding: 8px 16px;
     resize: none;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     outline: 0px solid transparent;
 }
 
@@ -709,7 +724,6 @@ img{
 
 
 .review-form-checkbox-wrapper{
-    margin-top: 8px;
     margin-bottom: 24px;
 }
 
@@ -730,6 +744,8 @@ img{
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.40);
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: transparent;
 }
 
 .privacy-policy{
@@ -742,6 +758,8 @@ img{
 }
 
 .review-form-checkbox:checked + .review-form-checkbox-label > .review-form-own-checkbox{
+    border: none;
+    fill: #F4F4FD;
     background-color: #404BBF;
 }
 
@@ -775,7 +793,7 @@ img{
     min-width: 169px;
     height: 56px;
     border: none;
-    transition: background-color250ms cubic-bezier(0.4, 0, 0.2,1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2,1);
 }
 
 .review-form-submit-btn:hover,
