--- a/css/styles.css
+++ b/css/styles.css
@@ -653,6 +653,10 @@ img{
 }
 
 .review-form-field-wrapper{
+    margin-bottom: 8px;
+}
+
+.review-form-field-wrapper-textarea{
     margin-bottom: 16px;
 }
 
